--- a/mila/map.html
+++ b/mila/map.html
@@ -4,12 +4,29 @@
 <title>GISViz</title>
 <meta charset="UTF-8">
 <link rel="icon" href="chart.ico">
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=">
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=false">
 <script>
+function init() {
+  var opts = {center: new google.maps.LatLng(50.676, 120.340), zoom: 8}
+  var map = new google.maps.Map(document.getElementById("map"), opts)
+  console.log("Successfully loaded map")
+}
 
+google.maps.event.addDomListener(window, "load", init)
 </script>
+<style>
+html, body, #map {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  width: 500px;
+}
+</style>
 </head>
 <body>
-
+<div id="map"></div>
 </body>
 </html>
