--- a/mila/map.html
+++ b/mila/map.html
@@ -4,7 +4,8 @@
 <title>GISViz</title>
 <meta charset="UTF-8">
 <link rel="icon" href="chart.ico">
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=false">
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 function init() {
   var opts = {center: new google.maps.LatLng(50.676, 120.340), zoom: 8}
@@ -12,7 +13,7 @@ function init() {
   console.log("Successfully loaded map")
 }
 
-google.maps.event.addDomListener(window, "load", init)
+google.maps.event.addDomListener(window, 'load', init)
 </script>
 <style>
 html, body, #map {
