--- a/mila/map.html
+++ b/mila/map.html
@@ -8,9 +8,42 @@
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 function init() {
-  var opts = {center: new google.maps.LatLng(50.676, -120.340), zoom: 8}
+  var opts = {center: new google.maps.LatLng(50.676, -120.340), zoom: 8, mapTypeId: google.maps.MapTypeId.HYBRID}
   var map = new google.maps.Map(document.getElementById("map"), opts)
-  console.log("Successfully loaded map")
+  var shapes = []
+  var opts
+
+  shapes[0] = {
+    center: new google.maps.LatLng(50.552, -120.327),
+    shape: "circle",
+    count: 2000
+  }
+
+  shapes[1] = {
+    center: new google.maps.LatLng(50.852, -120.727),
+    shape: "rect",
+    count: 800
+  }
+
+  console.log("Map loaded, drawing shapes...")
+  for (shp in shapes) {
+    var radius = Math.sqrt(shapes[shp].count) * 100
+
+    switch(shapes[shp].shape) {
+      case "circle":
+        opts = {strokeColor: "#FF0000", strokeOpacity: 0.75, strokeWeight: 2, fillColor: "#FF00FF", fillOpacity: 0.25, map: map, center: shapes[shp].center, radius: radius}
+        new google.maps.Circle(opts)
+        break
+      case "rect":
+        var sw = new google.maps.LatLng()
+        var ne = new google.maps.LatLng()
+        var bounds = new google.maps.LatLngBounds(sw, ne)
+
+        opts = {strokeColor: "#FF0000", strokeOpacity: 0.75, strokeWeight: 2, fillColor: "#FF00FF", fillOpacity: 0.25, map: map, bounds: bounds}
+        new google.maps.Rectangle(opts)
+        break
+    }
+  }
 }
 
 google.maps.event.addDomListener(window, 'load', init)
