Updated project listing

--- a/mila/index.html
+++ b/mila/index.html
@@ -25,6 +25,7 @@ div {
   <ul>
     <li><a href="waterdepth.html">Water Depth Analyzer</a></li>
     <li><a href="map.html">GISViz (Google Maps)</a></li>
+    <li><a href="dustweb.html">DustDuino Web Interface</a></li>
   </ul>
 </div>
 </body>
