Added meta tags to new app pages

--- a/HyperSudoCube/index.html
+++ b/HyperSudoCube/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="StackCanary">
+    <meta name="description" content="Puzzle game mixing Hypersudoku (Sudoku with more than 9 symbols) with a 4x4 Rubik's Cube">
+    <meta name="keywords" content="sudoku,rubiks,puzzle,hypersudocube,hypersudoku">
     <link rel="icon" type="image/x-icon" href="rubiks-cube.png" />
     <title>HyperSudoCube</title>
     <style>
